add is favourited information to list of all lessons